@@ -157,6 +157,9 @@
     \itemize{
       \item For consistency with \code{[dpq]lnorm()},
       \code{rlnorm(sdlog = 0)} is now an error and so returns \code{NaN}.
+      
+      \item Fixed an obscure bug in pairlist subassignment, reported by 
+      Radford Neal as part of pqR issue 16.
     }
   }
 }
